<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ComposeTweetFragment"
    android:background="@drawable/dialog_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compose_tweet"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:text=""
            android:id="@+id/compose_header"
            android:background="@drawable/tweetseparator"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:background="@drawable/edittext_border"
            android:layout_width="fill_parent"
            android:maxLength="140"
            android:textSize="10sp"
            android:layout_height="100dp"
            android:id="@+id/etTweetBox"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_below="@+id/compose_header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:inputType="textMultiLine"
            android:paddingTop="0dp"/>

        <LinearLayout
            android:layout_height="100dp"
            android:layout_width="fill_parent"
            android:layout_below="@+id/etTweetBox"
            android:orientation="horizontal"
            android:weightSum="1">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/camera"
                android:src="@drawable/camera"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/location"
                android:layout_margin="15dp"
                android:id="@+id/map" />

            <LinearLayout
                android:layout_height="fill_parent"
                android:layout_width="75dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_limit"
                    android:id="@+id/character_limit"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="15dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                >
                <Button
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_tweet"
                    android:id="@+id/submit_tweet"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:background="@drawable/button_custom_b"
                    android:textColor="@color/textwhite"
                    />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
