<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.codepath.apps.twitterclient.activities.TweetDetailActivity"
    tools:showIn="@layout/activity_tweet_detail">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/profilepic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/tweetBody"
        android:layout_below="@+id/profilepic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" />

    <LinearLayout
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@id/tweetBody"
        android:layout_height="100dp"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retweet"
            android:id="@+id/retweetText"
            android:layout_margin="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/retweetNumber"
            android:layout_margin="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:id="@+id/likeText"
            android:layout_margin="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/likeNumber"
            android:layout_margin="20dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/screenname"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/profilepic"
        android:layout_toEndOf="@+id/profilepic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_above="@+id/profilepic"
        />

    <EditText
        android:background="@drawable/edittext_border"
        android:layout_width="fill_parent"
        android:maxLength="140"
        android:textSize="10sp"
        android:layout_height="100dp"
        android:id="@+id/etReplyBox"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:inputType="textMultiLine"
        android:paddingTop="0dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reply"
        android:id="@+id/reply_tweet"
        android:layout_gravity="center"
        android:background="@drawable/button_custom_b"
        android:textColor="@color/textwhite"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
